@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
-* 
+* [mms] Fix sieve driver correctly identifying mailing lists when determining whether to send vacation messages (Bug #12938; skhorde@smail.inf.fg-bonn-rhein-sieg.de).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1328,7 +1328,7 @@
    <date>2013-10-29</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* 
+* [mms] Fix sieve driver correctly identifying mailing lists when determining whether to send vacation messages (Bug #12938; skhorde@smail.inf.fg-bonn-rhein-sieg.de).
    </notes>
   </release>
  </changelog>
